[package]
name = "cw20-bondcamp"
version = "0.1.0"
authors = ["Alex Lynham <alex@lynh.am>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw0 = { version = "0.8.0-rc1" }
cw2 = { version = "0.8.0-rc1" }
cw20 = { version = "0.8.0-rc1" }
cw20-base = { version = "0.8.0-rc1", features = ["library"] }
cw20-bonding = { version = "0.8.0-rc1", features = ["library"] }
cw-storage-plus = { version = "0.8.0-rc1" }
cosmwasm-std = { version = "0.16.0-rc5", default-features = false, features = ["staking"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }
rust_decimal = { version = "1.14.3" }
integer-sqrt = { version = "0.1.5" }
integer-cbrt = { version = "0.1.2" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0-rc5" }
